--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/timegrid": "^6.1.11",
     "@syncfusion/ej2-react-schedule": "^25.1.41",
     "@types/react-big-calendar": "^1.8.9",
+    "antd": "^5.16.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
     "react-dom": "^18.2.0",
