--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,3 @@
-MONGODB_URI=mongodb+srv://salmans581:TOOwVCaBDopHu1Gi@fso.poa3s.mongodb.net/PACETREK?retryWrites=true&w=majority&appName=fso
-
-PORT=3001
-
-TEST_MONGODB_URI=mongodb+srv://salmans581:TOOwVCaBDopHu1Gi@fso.poa3s.mongodb.net/testPACETREK?retryWrites=true&w=majority&appName=fso
-
-SECRET=jkoljijio
+MONGO_URL = mongodb://localhost:27017/mydb
+PORT = 4000
+TOKEN_KEY= jklghfgsd
