--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,23 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "pacetrek",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "pacetrek",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
+    "mongoose": "^8.3.2",
     "nodemon": "^3.1.0"
   }
 }
