--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projects6",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,16 +17,19 @@
     "@syncfusion/ej2-react-schedule": "^25.1.41",
     "@types/react-big-calendar": "^1.8.9",
     "antd": "^5.16.4",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
