--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-big-calendar": "^1.8.9",
     "antd": "^5.16.4",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.6",
     "react-cookie": "^7.1.4",
